[gd_scene load_steps=9 format=3 uid="uid://crwb4tufnfqgd"]

[ext_resource type="Script" uid="uid://cum5esp2vacne" path="res://ui/in_between.gd" id="1_3deh7"]
[ext_resource type="Texture2D" uid="uid://br2164r1fo5yf" path="res://img/parallax_layers/inbetween2.png" id="2_nj4ci"]

[sub_resource type="Gradient" id="Gradient_nj4ci"]
offsets = PackedFloat32Array(0.65254235, 1)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_guio5"]
gradient = SubResource("Gradient_nj4ci")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4whpb"]
texture = SubResource("GradientTexture2D_guio5")

[sub_resource type="Gradient" id="Gradient_v8335"]
offsets = PackedFloat32Array(0.48305085, 1)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_sqv5q"]
gradient = SubResource("Gradient_v8335")
fill_from = Vector2(1, 0)
fill_to = Vector2(0, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ebx5r"]
texture = SubResource("GradientTexture2D_sqv5q")

[node name="InBetween" type="CanvasLayer"]
script = ExtResource("1_3deh7")

[node name="BG" type="ColorRect" parent="."]
offset_left = -54.0
offset_top = -47.0
offset_right = 1213.0
offset_bottom = 702.0
color = Color(0, 0, 0, 1)

[node name="Level2" type="TextureRect" parent="BG"]
layout_mode = 0
offset_left = 54.0
offset_top = 45.0
offset_right = 1206.0
offset_bottom = 693.0
texture = ExtResource("2_nj4ci")

[node name="UpperTitle" type="RichTextLabel" parent="BG"]
layout_mode = 0
offset_left = 133.0
offset_top = 113.0
offset_right = 1018.0
offset_bottom = 185.0
theme_override_constants/outline_size = 21
theme_override_font_sizes/normal_font_size = 54
theme_override_styles/normal = SubResource("StyleBoxTexture_4whpb")
bbcode_enabled = true
text = "YOU GOT A LITTLE [color=yellow]HAT[/color]!"

[node name="LowerTitle" type="RichTextLabel" parent="BG"]
layout_mode = 0
offset_left = 371.0
offset_top = 540.0
offset_right = 1174.0
offset_bottom = 657.0
theme_override_constants/outline_size = 15
theme_override_font_sizes/normal_font_size = 45
theme_override_styles/normal = SubResource("StyleBoxTexture_ebx5r")
bbcode_enabled = true
text = "[right]LOOKIN' NICE PAL
[font_size=30]Press [color=yellow][C][/color] to continue [/font_size]
[/right]
"
scroll_active = false
